ì결과값 수정 기능 추가